; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_sony-laptop.c_sony_nc_fanspeed_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_sony-laptop.c_sony_nc_fanspeed_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }

@fan_handle = common dso_local global i32* null, align 8
@hsf_handle = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.platform_device*)* @sony_nc_fanspeed_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sony_nc_fanspeed_cleanup(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %3 = load i32*, i32** @fan_handle, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %7 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %6, i32 0, i32 0
  %8 = load i32*, i32** @fan_handle, align 8
  %9 = call i32 @device_remove_file(i32* %7, i32* %8)
  %10 = load i32*, i32** @fan_handle, align 8
  %11 = call i32 @kfree(i32* %10)
  store i32* null, i32** @fan_handle, align 8
  br label %12

12:                                               ; preds = %5, %1
  %13 = load i32*, i32** @hsf_handle, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %12
  %16 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %17 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %16, i32 0, i32 0
  %18 = load i32*, i32** @hsf_handle, align 8
  %19 = call i32 @device_remove_file(i32* %17, i32* %18)
  %20 = load i32*, i32** @hsf_handle, align 8
  %21 = call i32 @kfree(i32* %20)
  store i32* null, i32** @hsf_handle, align 8
  br label %22

22:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @device_remove_file(i32*, i32*) #1

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
